@@ -1,3 +1,9 @@
+2024-05-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* unicode.c, ptexenc.c:
+	Enable to treat the new internal encoding of upTeX
+	also with pTeX mode (--kanji-internal={euc,sjis}).
+
 2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* unicode.c, ptexenc/unicode.h:
